Update IOUtil and KeyUtil and their tests.